Analizador/Prubas 2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    BARRA
    BREAK
    CAPACITY
    CD
    CI
    CONTAINS
    CONTINUE
    ELSE
    ERR
    FOR
    GBAJO
    IF
    IN
    INSERT
    LEN
    LOOP
    MATCH
    MOD
    NEW
    PUSH
    REMOVE
    RETURN
    STRUCT
    VECT
    WCAPACITY
    WHILE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> impresiones
Rule 5     instruccion -> declaracion
Rule 6     instruccion -> asignacion
Rule 7     instruccion -> funcion
Rule 8     instruccion -> llamada PYC
Rule 9     llamada -> ID PI PD
Rule 10    llamada -> ID PI lista_expres PD
Rule 11    lista_expres -> lista_expres COMA expresiones
Rule 12    lista_expres -> expresiones
Rule 13    funcion -> FUNCION MAIN PI PD LI instrucciones LD
Rule 14    funcion -> FUNCION ID PI PD tipo_funcion LI instrucciones LD
Rule 15    funcion -> FUNCION ID PI parametros PD tipo_funcion LI instrucciones LD
Rule 16    parametros -> parametros COMA definiciones
Rule 17    parametros -> definiciones
Rule 18    definiciones -> referencias mutable ID VECTOR tipado_vector
Rule 19    definiciones -> referencias mutable ID tipado
Rule 20    referencias -> REFER
Rule 21    referencias -> <empty>
Rule 22    tipado_vector -> <empty>
Rule 23    acceso -> PUBLICO
Rule 24    acceso -> <empty>
Rule 25    tipo_funcion -> RESTA MAYOR tipo_datos
Rule 26    tipo_funcion -> RESTA MAYOR VECTOR MENOR tipo_datos MAYOR
Rule 27    tipo_funcion -> <empty>
Rule 28    declaracion -> LET mutable ID tipado PYC
Rule 29    declaracion -> LET mutable ID tipado IGUAL expresiones PYC
Rule 30    asignacion -> ID IGUAL expresiones PYC
Rule 31    mutable -> MUT
Rule 32    mutable -> <empty>
Rule 33    tipado -> DP tipo_datos
Rule 34    tipado -> <empty>
Rule 35    tipo_datos -> TIPOINT
Rule 36    tipo_datos -> TIPOFLOAT
Rule 37    tipo_datos -> TIPOCHAR
Rule 38    tipo_datos -> TIPOSTRING
Rule 39    tipo_datos -> DIRSTRING
Rule 40    tipo_datos -> TIPOBOOL
Rule 41    impresiones -> PRINTLN PI CADENA PD PYC
Rule 42    impresiones -> PRINT PI CADENA PD PYC
Rule 43    impresiones -> PRINTLN PI CADENA COMA impresion_valores PD PYC
Rule 44    impresiones -> PRINT PI CADENA COMA impresion_valores PD PYC
Rule 45    impresion_valores -> impresion_valores COMA expresiones
Rule 46    impresion_valores -> expresiones
Rule 47    expresiones -> RESTA expresiones
Rule 48    expresiones -> expresiones SUMA expresiones
Rule 49    expresiones -> expresiones RESTA expresiones
Rule 50    expresiones -> expresiones MULTI expresiones
Rule 51    expresiones -> expresiones DIVI expresiones
Rule 52    expresiones -> expresiones MODULO expresiones
Rule 53    expresiones -> expresiones OR expresiones
Rule 54    expresiones -> expresiones AND expresiones
Rule 55    expresiones -> NOT expresiones
Rule 56    expresiones -> POWF PI expresiones COMA expresiones PD
Rule 57    expresiones -> POW PI expresiones COMA expresiones PD
Rule 58    expresiones -> expresiones MAYORIGUAL expresiones
Rule 59    expresiones -> expresiones MAYOR expresiones
Rule 60    expresiones -> expresiones MENORIGUAL expresiones
Rule 61    expresiones -> expresiones MENOR expresiones
Rule 62    expresiones -> expresiones IGUALDAD expresiones
Rule 63    expresiones -> expresiones DESIGUALDAD expresiones
Rule 64    expresiones -> PI expresiones PD
Rule 65    expresiones -> ID
Rule 66    expresiones -> ENTERO
Rule 67    expresiones -> expresiones PUNTO nativas
Rule 68    expresiones -> FLOAT
Rule 69    expresiones -> CADENA
Rule 70    expresiones -> TRUE
Rule 71    expresiones -> FALSE
Rule 72    expresiones -> CARACTER
Rule 73    nativas -> ABS
Rule 74    nativas -> SQRT
Rule 75    nativas -> TOSTRING
Rule 76    nativas -> TOOWNED
Rule 77    nativas -> CLONE

Terminals, with rules where they appear

ABS                  : 73
AND                  : 54
AS                   : 
BARRA                : 
BREAK                : 
CADENA               : 41 42 43 44 69
CAPACITY             : 
CARACTER             : 72
CD                   : 
CI                   : 
CLONE                : 77
COMA                 : 11 16 43 44 45 56 57
CONTAINS             : 
CONTINUE             : 
DESIGUALDAD          : 63
DIRSTRING            : 39
DIVI                 : 51
DP                   : 33
ELSE                 : 
ENTERO               : 66
ERR                  : 
FALSE                : 71
FLOAT                : 68
FOR                  : 
FUNCION              : 13 14 15
GBAJO                : 
ID                   : 9 10 14 15 18 19 28 29 30 65
IF                   : 
IGUAL                : 29 30
IGUALDAD             : 62
IN                   : 
INSERT               : 
LD                   : 13 14 15
LEN                  : 
LET                  : 28 29
LI                   : 13 14 15
LOOP                 : 
MAIN                 : 13
MATCH                : 
MAYOR                : 25 26 26 59
MAYORIGUAL           : 58
MENOR                : 26 61
MENORIGUAL           : 60
MOD                  : 
MODULO               : 52
MULTI                : 50
MUT                  : 31
NEW                  : 
NOT                  : 55
OR                   : 53
PD                   : 9 10 13 14 15 41 42 43 44 56 57 64
PI                   : 9 10 13 14 15 41 42 43 44 56 57 64
POW                  : 57
POWF                 : 56
PRINT                : 42 44
PRINTLN              : 41 43
PUBLICO              : 23
PUNTO                : 67
PUSH                 : 
PYC                  : 8 28 29 30 41 42 43 44
REFER                : 20
REMOVE               : 
RESTA                : 25 26 47 49
RETURN               : 
SQRT                 : 74
STRUCT               : 
SUMA                 : 48
TIPOBOOL             : 40
TIPOCHAR             : 37
TIPOFLOAT            : 36
TIPOINT              : 35
TIPOSTRING           : 38
TOOWNED              : 76
TOSTRING             : 75
TRUE                 : 70
VECT                 : 
VECTOR               : 18 26
WCAPACITY            : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

acceso               : 
asignacion           : 6
declaracion          : 5
definiciones         : 16 17
expresiones          : 11 12 29 30 45 46 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 67
funcion              : 7
impresion_valores    : 43 44 45
impresiones          : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 13 14 15
lista_expres         : 10 11
llamada              : 8
mutable              : 18 19 28 29
nativas              : 67
parametros           : 15 16
referencias          : 18 19
tipado               : 19 28 29
tipado_vector        : 18
tipo_datos           : 25 26 33
tipo_funcion         : 14 15

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . impresiones
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion
    (7) instruccion -> . funcion
    (8) instruccion -> . llamada PYC
    (41) impresiones -> . PRINTLN PI CADENA PD PYC
    (42) impresiones -> . PRINT PI CADENA PD PYC
    (43) impresiones -> . PRINTLN PI CADENA COMA impresion_valores PD PYC
    (44) impresiones -> . PRINT PI CADENA COMA impresion_valores PD PYC
    (28) declaracion -> . LET mutable ID tipado PYC
    (29) declaracion -> . LET mutable ID tipado IGUAL expresiones PYC
    (30) asignacion -> . ID IGUAL expresiones PYC
    (13) funcion -> . FUNCION MAIN PI PD LI instrucciones LD
    (14) funcion -> . FUNCION ID PI PD tipo_funcion LI instrucciones LD
    (15) funcion -> . FUNCION ID PI parametros PD tipo_funcion LI instrucciones LD
    (9) llamada -> . ID PI PD
    (10) llamada -> . ID PI lista_expres PD

    PRINTLN         shift and go to state 9
    PRINT           shift and go to state 10
    LET             shift and go to state 11
    ID              shift and go to state 12
    FUNCION         shift and go to state 13

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    impresiones                    shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    funcion                        shift and go to state 7
    llamada                        shift and go to state 8

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . impresiones
    (5) instruccion -> . declaracion
    (6) instruccion -> . asignacion
    (7) instruccion -> . funcion
    (8) instruccion -> . llamada PYC
    (41) impresiones -> . PRINTLN PI CADENA PD PYC
    (42) impresiones -> . PRINT PI CADENA PD PYC
    (43) impresiones -> . PRINTLN PI CADENA COMA impresion_valores PD PYC
    (44) impresiones -> . PRINT PI CADENA COMA impresion_valores PD PYC
    (28) declaracion -> . LET mutable ID tipado PYC
    (29) declaracion -> . LET mutable ID tipado IGUAL expresiones PYC
    (30) asignacion -> . ID IGUAL expresiones PYC
    (13) funcion -> . FUNCION MAIN PI PD LI instrucciones LD
    (14) funcion -> . FUNCION ID PI PD tipo_funcion LI instrucciones LD
    (15) funcion -> . FUNCION ID PI parametros PD tipo_funcion LI instrucciones LD
    (9) llamada -> . ID PI PD
    (10) llamada -> . ID PI lista_expres PD

    $end            reduce using rule 1 (init -> instrucciones .)
    PRINTLN         shift and go to state 9
    PRINT           shift and go to state 10
    LET             shift and go to state 11
    ID              shift and go to state 12
    FUNCION         shift and go to state 13

    instruccion                    shift and go to state 14
    impresiones                    shift and go to state 4
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    funcion                        shift and go to state 7
    llamada                        shift and go to state 8

state 3

    (3) instrucciones -> instruccion .

    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    FUNCION         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LD              reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> impresiones .

    PRINTLN         reduce using rule 4 (instruccion -> impresiones .)
    PRINT           reduce using rule 4 (instruccion -> impresiones .)
    LET             reduce using rule 4 (instruccion -> impresiones .)
    ID              reduce using rule 4 (instruccion -> impresiones .)
    FUNCION         reduce using rule 4 (instruccion -> impresiones .)
    $end            reduce using rule 4 (instruccion -> impresiones .)
    LD              reduce using rule 4 (instruccion -> impresiones .)


state 5

    (5) instruccion -> declaracion .

    PRINTLN         reduce using rule 5 (instruccion -> declaracion .)
    PRINT           reduce using rule 5 (instruccion -> declaracion .)
    LET             reduce using rule 5 (instruccion -> declaracion .)
    ID              reduce using rule 5 (instruccion -> declaracion .)
    FUNCION         reduce using rule 5 (instruccion -> declaracion .)
    $end            reduce using rule 5 (instruccion -> declaracion .)
    LD              reduce using rule 5 (instruccion -> declaracion .)


state 6

    (6) instruccion -> asignacion .

    PRINTLN         reduce using rule 6 (instruccion -> asignacion .)
    PRINT           reduce using rule 6 (instruccion -> asignacion .)
    LET             reduce using rule 6 (instruccion -> asignacion .)
    ID              reduce using rule 6 (instruccion -> asignacion .)
    FUNCION         reduce using rule 6 (instruccion -> asignacion .)
    $end            reduce using rule 6 (instruccion -> asignacion .)
    LD              reduce using rule 6 (instruccion -> asignacion .)


state 7

    (7) instruccion -> funcion .

    PRINTLN         reduce using rule 7 (instruccion -> funcion .)
    PRINT           reduce using rule 7 (instruccion -> funcion .)
    LET             reduce using rule 7 (instruccion -> funcion .)
    ID              reduce using rule 7 (instruccion -> funcion .)
    FUNCION         reduce using rule 7 (instruccion -> funcion .)
    $end            reduce using rule 7 (instruccion -> funcion .)
    LD              reduce using rule 7 (instruccion -> funcion .)


state 8

    (8) instruccion -> llamada . PYC

    PYC             shift and go to state 15


state 9

    (41) impresiones -> PRINTLN . PI CADENA PD PYC
    (43) impresiones -> PRINTLN . PI CADENA COMA impresion_valores PD PYC

    PI              shift and go to state 16


state 10

    (42) impresiones -> PRINT . PI CADENA PD PYC
    (44) impresiones -> PRINT . PI CADENA COMA impresion_valores PD PYC

    PI              shift and go to state 17


state 11

    (28) declaracion -> LET . mutable ID tipado PYC
    (29) declaracion -> LET . mutable ID tipado IGUAL expresiones PYC
    (31) mutable -> . MUT
    (32) mutable -> .

    MUT             shift and go to state 19
    ID              reduce using rule 32 (mutable -> .)

    mutable                        shift and go to state 18

state 12

    (30) asignacion -> ID . IGUAL expresiones PYC
    (9) llamada -> ID . PI PD
    (10) llamada -> ID . PI lista_expres PD

    IGUAL           shift and go to state 20
    PI              shift and go to state 21


state 13

    (13) funcion -> FUNCION . MAIN PI PD LI instrucciones LD
    (14) funcion -> FUNCION . ID PI PD tipo_funcion LI instrucciones LD
    (15) funcion -> FUNCION . ID PI parametros PD tipo_funcion LI instrucciones LD

    MAIN            shift and go to state 22
    ID              shift and go to state 23


state 14

    (2) instrucciones -> instrucciones instruccion .

    PRINTLN         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PRINT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FUNCION         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LD              reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 15

    (8) instruccion -> llamada PYC .

    PRINTLN         reduce using rule 8 (instruccion -> llamada PYC .)
    PRINT           reduce using rule 8 (instruccion -> llamada PYC .)
    LET             reduce using rule 8 (instruccion -> llamada PYC .)
    ID              reduce using rule 8 (instruccion -> llamada PYC .)
    FUNCION         reduce using rule 8 (instruccion -> llamada PYC .)
    $end            reduce using rule 8 (instruccion -> llamada PYC .)
    LD              reduce using rule 8 (instruccion -> llamada PYC .)


state 16

    (41) impresiones -> PRINTLN PI . CADENA PD PYC
    (43) impresiones -> PRINTLN PI . CADENA COMA impresion_valores PD PYC

    CADENA          shift and go to state 24


state 17

    (42) impresiones -> PRINT PI . CADENA PD PYC
    (44) impresiones -> PRINT PI . CADENA COMA impresion_valores PD PYC

    CADENA          shift and go to state 25


state 18

    (28) declaracion -> LET mutable . ID tipado PYC
    (29) declaracion -> LET mutable . ID tipado IGUAL expresiones PYC

    ID              shift and go to state 26


state 19

    (31) mutable -> MUT .

    ID              reduce using rule 31 (mutable -> MUT .)


state 20

    (30) asignacion -> ID IGUAL . expresiones PYC
    (47) expresiones -> . RESTA expresiones
    (48) expresiones -> . expresiones SUMA expresiones
    (49) expresiones -> . expresiones RESTA expresiones
    (50) expresiones -> . expresiones MULTI expresiones
    (51) expresiones -> . expresiones DIVI expresiones
    (52) expresiones -> . expresiones MODULO expresiones
    (53) expresiones -> . expresiones OR expresiones
    (54) expresiones -> . expresiones AND expresiones
    (55) expresiones -> . NOT expresiones
    (56) expresiones -> . POWF PI expresiones COMA expresiones PD
    (57) expresiones -> . POW PI expresiones COMA expresiones PD
    (58) expresiones -> . expresiones MAYORIGUAL expresiones
    (59) expresiones -> . expresiones MAYOR expresiones
    (60) expresiones -> . expresiones MENORIGUAL expresiones
    (61) expresiones -> . expresiones MENOR expresiones
    (62) expresiones -> . expresiones IGUALDAD expresiones
    (63) expresiones -> . expresiones DESIGUALDAD expresiones
    (64) expresiones -> . PI expresiones PD
    (65) expresiones -> . ID
    (66) expresiones -> . ENTERO
    (67) expresiones -> . expresiones PUNTO nativas
    (68) expresiones -> . FLOAT
    (69) expresiones -> . CADENA
    (70) expresiones -> . TRUE
    (71) expresiones -> . FALSE
    (72) expresiones -> . CARACTER

    RESTA           shift and go to state 29
    NOT             shift and go to state 30
    POWF            shift and go to state 31
    POW             shift and go to state 33
    PI              shift and go to state 32
    ID              shift and go to state 27
    ENTERO          shift and go to state 34
    FLOAT           shift and go to state 35
    CADENA          shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    CARACTER        shift and go to state 39

    expresiones                    shift and go to state 28

state 21

    (9) llamada -> ID PI . PD
    (10) llamada -> ID PI . lista_expres PD
    (11) lista_expres -> . lista_expres COMA expresiones
    (12) lista_expres -> . expresiones
    (47) expresiones -> . RESTA expresiones
    (48) expresiones -> . expresiones SUMA expresiones
    (49) expresiones -> . expresiones RESTA expresiones
    (50) expresiones -> . expresiones MULTI expresiones
    (51) expresiones -> . expresiones DIVI expresiones
    (52) expresiones -> . expresiones MODULO expresiones
    (53) expresiones -> . expresiones OR expresiones
    (54) expresiones -> . expresiones AND expresiones
    (55) expresiones -> . NOT expresiones
    (56) expresiones -> . POWF PI expresiones COMA expresiones PD
    (57) expresiones -> . POW PI expresiones COMA expresiones PD
    (58) expresiones -> . expresiones MAYORIGUAL expresiones
    (59) expresiones -> . expresiones MAYOR expresiones
    (60) expresiones -> . expresiones MENORIGUAL expresiones
    (61) expresiones -> . expresiones MENOR expresiones
    (62) expresiones -> . expresiones IGUALDAD expresiones
    (63) expresiones -> . expresiones DESIGUALDAD expresiones
    (64) expresiones -> . PI expresiones PD
    (65) expresiones -> . ID
    (66) expresiones -> . ENTERO
    (67) expresiones -> . expresiones PUNTO nativas
    (68) expresiones -> . FLOAT
    (69) expresiones -> . CADENA
    (70) expresiones -> . TRUE
    (71) expresiones -> . FALSE
    (72) expresiones -> . CARACTER

    PD              shift and go to state 40
    RESTA           shift and go to state 29
    NOT             shift and go to state 30
    POWF            shift and go to state 31
    POW             shift and go to state 33
    PI              shift and go to state 32
    ID              shift and go to state 27
    ENTERO          shift and go to state 34
    FLOAT           shift and go to state 35
    CADENA          shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    CARACTER        shift and go to state 39

    lista_expres                   shift and go to state 41
    expresiones                    shift and go to state 42

state 22

    (13) funcion -> FUNCION MAIN . PI PD LI instrucciones LD

    PI              shift and go to state 43


state 23

    (14) funcion -> FUNCION ID . PI PD tipo_funcion LI instrucciones LD
    (15) funcion -> FUNCION ID . PI parametros PD tipo_funcion LI instrucciones LD

    PI              shift and go to state 44


state 24

    (41) impresiones -> PRINTLN PI CADENA . PD PYC
    (43) impresiones -> PRINTLN PI CADENA . COMA impresion_valores PD PYC

    PD              shift and go to state 45
    COMA            shift and go to state 46


state 25

    (42) impresiones -> PRINT PI CADENA . PD PYC
    (44) impresiones -> PRINT PI CADENA . COMA impresion_valores PD PYC

    PD              shift and go to state 47
    COMA            shift and go to state 48


state 26

    (28) declaracion -> LET mutable ID . tipado PYC
    (29) declaracion -> LET mutable ID . tipado IGUAL expresiones PYC
    (33) tipado -> . DP tipo_datos
    (34) tipado -> .

    DP              shift and go to state 50
    PYC             reduce using rule 34 (tipado -> .)
    IGUAL           reduce using rule 34 (tipado -> .)

    tipado                         shift and go to state 49

state 27

    (65) expresiones -> ID .

    PYC             reduce using rule 65 (expresiones -> ID .)
    SUMA            reduce using rule 65 (expresiones -> ID .)
    RESTA           reduce using rule 65 (expresiones -> ID .)
    MULTI           reduce using rule 65 (expresiones -> ID .)
    DIVI            reduce using rule 65 (expresiones -> ID .)
    MODULO          reduce using rule 65 (expresiones -> ID .)
    OR              reduce using rule 65 (expresiones -> ID .)
    AND             reduce using rule 65 (expresiones -> ID .)
    MAYORIGUAL      reduce using rule 65 (expresiones -> ID .)
    MAYOR           reduce using rule 65 (expresiones -> ID .)
    MENORIGUAL      reduce using rule 65 (expresiones -> ID .)
    MENOR           reduce using rule 65 (expresiones -> ID .)
    IGUALDAD        reduce using rule 65 (expresiones -> ID .)
    DESIGUALDAD     reduce using rule 65 (expresiones -> ID .)
    PUNTO           reduce using rule 65 (expresiones -> ID .)
    PD              reduce using rule 65 (expresiones -> ID .)
    COMA            reduce using rule 65 (expresiones -> ID .)


state 28

    (30) asignacion -> ID IGUAL expresiones . PYC
    (48) expresiones -> expresiones . SUMA expresiones
    (49) expresiones -> expresiones . RESTA expresiones
    (50) expresiones -> expresiones . MULTI expresiones
    (51) expresiones -> expresiones . DIVI expresiones
    (52) expresiones -> expresiones . MODULO expresiones
    (53) expresiones -> expresiones . OR expresiones
    (54) expresiones -> expresiones . AND expresiones
    (58) expresiones -> expresiones . MAYORIGUAL expresiones
    (59) expresiones -> expresiones . MAYOR expresiones
    (60) expresiones -> expresiones . MENORIGUAL expresiones
    (61) expresiones -> expresiones . MENOR expresiones
    (62) expresiones -> expresiones . IGUALDAD expresiones
    (63) expresiones -> expresiones . DESIGUALDAD expresiones
    (67) expresiones -> expresiones . PUNTO nativas

    PYC             shift and go to state 51
    SUMA            shift and go to state 52
    RESTA           shift and go to state 53
    MULTI           shift and go to state 54
    DIVI            shift and go to state 55
    MODULO          shift and go to state 56
    OR              shift and go to state 57
    AND             shift and go to state 58
    MAYORIGUAL      shift and go to state 59
    MAYOR           shift and go to state 60
    MENORIGUAL      shift and go to state 61
    MENOR           shift and go to state 62
    IGUALDAD        shift and go to state 63
    DESIGUALDAD     shift and go to state 64
    PUNTO           shift and go to state 65


state 29

    (47) expresiones -> RESTA . expresiones
    (47) expresiones -> . RESTA expresiones
    (48) expresiones -> . expresiones SUMA expresiones
    (49) expresiones -> . expresiones RESTA expresiones
    (50) expresiones -> . expresiones MULTI expresiones
    (51) expresiones -> . expresiones DIVI expresiones
    (52) expresiones -> . expresiones MODULO expresiones
    (53) expresiones -> . expresiones OR expresiones
    (54) expresiones -> . expresiones AND expresiones
    (55) expresiones -> . NOT expresiones
    (56) expresiones -> . POWF PI expresiones COMA expresiones PD
    (57) expresiones -> . POW PI expresiones COMA expresiones PD
    (58) expresiones -> . expresiones MAYORIGUAL expresiones
    (59) expresiones -> . expresiones MAYOR expresiones
    (60) expresiones -> . expresiones MENORIGUAL expresiones
    (61) expresiones -> . expresiones MENOR expresiones
    (62) expresiones -> . expresiones IGUALDAD expresiones
    (63) expresiones -> . expresiones DESIGUALDAD expresiones
    (64) expresiones -> . PI expresiones PD
    (65) expresiones -> . ID
    (66) expresiones -> . ENTERO
    (67) expresiones -> . expresiones PUNTO nativas
    (68) expresiones -> . FLOAT
    (69) expresiones -> . CADENA
    (70) expresiones -> . TRUE
    (71) expresiones -> . FALSE
    (72) expresiones -> . CARACTER

    RESTA           shift and go to state 29
    NOT             shift and go to state 30
    POWF            shift and go to state 31
    POW             shift and go to state 33
    PI              shift and go to state 32
    ID              shift and go to state 27
    ENTERO          shift and go to state 34
    FLOAT           shift and go to state 35
    CADENA          shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    CARACTER        shift and go to state 39

    expresiones                    shift and go to state 66

state 30

    (55) expresiones -> NOT . expresiones
    (47) expresiones -> . RESTA expresiones
    (48) expresiones -> . expresiones SUMA expresiones
    (49) expresiones -> . expresiones RESTA expresiones
    (50) expresiones -> . expresiones MULTI expresiones
    (51) expresiones -> . expresiones DIVI expresiones
    (52) expresiones -> . expresiones MODULO expresiones
    (53) expresiones -> . expresiones OR expresiones
    (54) expresiones -> . expresiones AND expresiones
    (55) expresiones -> . NOT expresiones
    (56) expresiones -> . POWF PI expresiones COMA expresiones PD
    (57) expresiones -> . POW PI expresiones COMA expresiones PD
    (58) expresiones -> . expresiones MAYORIGUAL expresiones
    (59) expresiones -> . expresiones MAYOR expresiones
    (60) expresiones -> . expresiones MENORIGUAL expresiones
    (61) expresiones -> . expresiones MENOR expresiones
    (62) expresiones -> . expresiones IGUALDAD expresiones
    (63) expresiones -> . expresiones DESIGUALDAD expresiones
    (64) expresiones -> . PI expresiones PD
    (65) expresiones -> . ID
    (66) expresiones -> . ENTERO
    (67) expresiones -> . expresiones PUNTO nativas
    (68) expresiones -> . FLOAT
    (69) expresiones -> . CADENA
    (70) expresiones -> . TRUE
    (71) expresiones -> . FALSE
    (72) expresiones -> . CARACTER

    RESTA           shift and go to state 29
    NOT             shift and go to state 30
    POWF            shift and go to state 31
    POW             shift and go to state 33
    PI              shift and go to state 32
    ID              shift and go to state 27
    ENTERO          shift and go to state 34
    FLOAT           shift and go to state 35
    CADENA          shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    CARACTER        shift and go to state 39

    expresiones                    shift and go to state 67

state 31

    (56) expresiones -> POWF . PI expresiones COMA expresiones PD

    PI              shift and go to state 68


state 32

    (64) expresiones -> PI . expresiones PD
    (47) expresiones -> . RESTA expresiones
    (48) expresiones -> . expresiones SUMA expresiones
    (49) expresiones -> . expresiones RESTA expresiones
    (50) expresiones -> . expresiones MULTI expresiones
    (51) expresiones -> . expresiones DIVI expresiones
    (52) expresiones -> . expresiones MODULO expresiones
    (53) expresiones -> . expresiones OR expresiones
    (54) expresiones -> . expresiones AND expresiones
    (55) expresiones -> . NOT expresiones
    (56) expresiones -> . POWF PI expresiones COMA expresiones PD
    (57) expresiones -> . POW PI expresiones COMA expresiones PD
    (58) expresiones -> . expresiones MAYORIGUAL expresiones
    (59) expresiones -> . expresiones MAYOR expresiones
    (60) expresiones -> . expresiones MENORIGUAL expresiones
    (61) expresiones -> . expresiones MENOR expresiones
    (62) expresiones -> . expresiones IGUALDAD expresiones
    (63) expresiones -> . expresiones DESIGUALDAD expresiones
    (64) expresiones -> . PI expresiones PD
    (65) expresiones -> . ID
    (66) expresiones -> . ENTERO
    (67) expresiones -> . expresiones PUNTO nativas
    (68) expresiones -> . FLOAT
    (69) expresiones -> . CADENA
    (70) expresiones -> . TRUE
    (71) expresiones -> . FALSE
    (72) expresiones -> . CARACTER

    RESTA           shift and go to state 29
    NOT             shift and go to state 30
    POWF            shift and go to state 31
    POW             shift and go to state 33
    PI              shift and go to state 32
    ID              shift and go to state 27
    ENTERO          shift and go to state 34
    FLOAT           shift and go to state 35
    CADENA          shift and go to state 36
    TRUE            shift and go to state 37
    FALSE           shift and go to state 38
    CARACTER        shift and go to state 39

    expresiones                    shift and go to state 69

state 33

    (57) expresiones -> POW . PI expresiones COMA expresiones PD

    PI              shift and go to state 70


state 34

    (66) expresiones -> ENTERO .

    PYC             reduce using rule 66 (expresiones -> ENTERO .)
    SUMA            reduce using rule 66 (expresiones -> ENTERO .)
    RESTA           reduce using rule 66 (expresiones -> ENTERO .)
    MULTI           reduce using rule 66 (expresiones -> ENTERO .)
    DIVI            reduce using rule 66 (expresiones -> ENTERO .)
    MODULO          reduce using rule 66 (expresiones -> ENTERO .)
    OR              reduce using rule 66 (expresiones -> ENTERO .)
    AND             reduce using rule 66 (expresiones -> ENTERO .)
    MAYORIGUAL      reduce using rule 66 (expresiones -> ENTERO .)
    MAYOR           reduce using rule 66 (expresiones -> ENTERO .)
    MENORIGUAL      reduce using rule 66 (expresiones -> ENTERO .)
    MENOR           reduce using rule 66 (expresiones -> ENTERO .)
    IGUALDAD        reduce using rule 66 (expresiones -> ENTERO .)
    DESIGUALDAD     reduce using rule 66 (expresiones -> ENTERO .)
    PUNTO           reduce using rule 66 (expresiones -> ENTERO .)
    PD              reduce using rule 66 (expresiones -> ENTERO .)
    COMA            reduce using rule 66 (expresiones -> ENTERO .)


state 35

    (68) expresiones -> FLOAT .

    PYC             reduce using rule 68 (expresiones -> FLOAT .)
    SUMA            reduce using rule 68 (expresiones -> FLOAT .)
    RESTA           reduce using rule 68 (expresiones -> FLOAT .)
    MULTI           reduce using rule 68 (expresiones -> FLOAT .)
    DIVI            reduce using rule 68 (expresiones -> FLOAT .)
    MODULO          reduce using rule 68 (expresiones -> FLOAT .)
    OR              reduce using rule 68 (expresiones -> FLOAT .)
    AND             reduce using rule 68 (expresiones -> FLOAT .)
    MAYORIGUAL      reduce using rule 68 (expresiones -> FLOAT .)
    MAYOR           reduce using rule 68 (expresiones -> FLOAT .)
    MENORIGUAL      reduce using rule 68 (expresiones -> FLOAT .)
    MENOR           reduce using rule 68 (expresiones -> FLOAT .)
    IGUALDAD        reduce using rule 68 (expresiones -> FLOAT .)
    DESIGUALDAD     reduce using rule 68 (expresiones -> FLOAT .)
    PUNTO           reduce using rule 68 (expresiones -> FLOAT .)
    PD              reduce using rule 68 (expresiones -> FLOAT .)
    COMA            reduce using rule 68 (expresiones -> FLOAT .)


state 36

    (69) expresiones -> CADENA .

    PYC             reduce using rule 69 (expresiones -> CADENA .)
    SUMA            reduce using rule 69 (expresiones -> CADENA .)
    RESTA           reduce using rule 69 (expresiones -> CADENA .)
    MULTI           reduce using rule 69 (expresiones -> CADENA .)
    DIVI            reduce using rule 69 (expresiones -> CADENA .)
    MODULO          reduce using rule 69 (expresiones -> CADENA .)
    OR              reduce using rule 69 (expresiones -> CADENA .)
    AND             reduce using rule 69 (expresiones -> CADENA .)
    MAYORIGUAL      reduce using rule 69 (expresiones -> CADENA .)
    MAYOR           reduce using rule 69 (expresiones -> CADENA .)
    MENORIGUAL      reduce using rule 69 (expresiones -> CADENA .)
    MENOR           reduce using rule 69 (expresiones -> CADENA .)
    IGUALDAD        reduce using rule 69 (expresiones -> CADENA .)
    DESIGUALDAD     reduce using rule 69 (expresiones -> CADENA .)
    PUNTO           reduce using rule 69 (expresiones -> CADENA .)
    PD              reduce using rule 69 (expresiones -> CADENA .)
    COMA            reduce using rule 69 (expresiones -> CADENA .)


state 37

    (70) expresiones -> TRUE .
